--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:theme="@style/Theme.ToDoPriority">
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +22,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.AddTaskActivity" android:exported="true"/>
+        <activity
+            android:name=".ui.AddTaskActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
